refactor(benchmark): use getLast() instead of get(size - 1) [REVIEW8-2.1]